# micro_waiter

./: README.md  manage.py  pyproject.toml
core/: views.py
dish_management/: apps.py  forms.py  models.py  urls.py  views.py
dish_management/migrations/: 0001_initial.py  0002_alter_dish_image_alter_dish_name_alter_dish_price_and_more.py  0002_alter_dish_quantity.py  0003_alter_dish_image.py  0004_alter_dish_image.py  0005_remove_dish_image.py
micro_waiter/: asgi.py  settings.py  urls.py  wsgi.py
order_management/: models.py  urls.py  views.py
order_management/migrations/: 0001_initial.py
static/js/: dish-delete.js  preview.js
templates/: base.html
templates/core/: index.html
templates/dish_management/: create.html  detail.html  index.html  update.html
templates/order_management/: index.html
