[tool.poetry]
name = "micro-waiter"
version = "0.1.0"
description = ""
authors = ["EGAMAGZ <46827955+EGAMAGZ@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
pillow = "^11.0.0"
django-cleanup = "^9.0.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
